<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FormularioActivity">

    <TextView
        style="@style/tituloPincipal"
        android:text="@string/calculadora"
         />

    <TextView
        style="@style/label"
        android:text="@string/meu_peso" />

    <EditText
        style="@style/input"
        android:hint="@string/ex_60" />

    <TextView
        style="@style/label"
        android:text="@string/minha_altura" />

    <EditText
        style="@style/input"
        android:hint="@string/ex_80" />

    <Button
       style="@style/botao"
        android:text="@string/calcular"/>
    <Button
        style="@style/botao"
        android:text="@string/limpar"
         />





</LinearLayout>